[gd_scene load_steps=10 format=3]

[ext_resource type="Script" path="res://scripts/game_controller.gd" id="1_game_controller"]
[ext_resource type="Script" path="res://scripts/plan_draw_layer.gd" id="2_plan_draw_layer"]
[ext_resource type="Script" path="res://scripts/intel_visualizer.gd" id="3_intel_visualizer"]
[ext_resource type="PackedScene" path="res://scenes/ArmyBanner.tscn" id="4_army_scene"]
[ext_resource type="PackedScene" path="res://scenes/Messenger.tscn" id="5_messenger_scene"]
[ext_resource type="PackedScene" path="res://scenes/PulseEffect.tscn" id="6_pulse_scene"]
[ext_resource type="PackedScene" path="res://ui/OrderPanel.tscn" id="7_order_panel_scene"]
[ext_resource type="Script" path="res://scripts/general.gd" id="8_general_script"]

[sub_resource type="Resource" script=ExtResource("8_general_script") id="Resource_General_1"]
general_id = &"g1"
display_name = "Marcus"
personality = "cautious"
loyalty = 0.8
competence = 0.7
autonomy_mode = 1

[node name="Main" type="Node2D"]
script = ExtResource("1_game_controller")
hq_node = NodePath("HQ")
pulse_effect_scene = ExtResource("6_pulse_scene")
messenger_scene = ExtResource("5_messenger_scene")

[node name="MapRoot" type="Node2D" parent="."]

[node name="Terrain" type="Sprite2D" parent="MapRoot"]
# Optional: set a map texture later.

[node name="Armies" type="Node2D" parent="MapRoot"]

[node name="A1" parent="MapRoot/Armies" instance=ExtResource("4_army_scene")]
position = Vector2(400, 300)
army_id = &"A1"
speed = 70.0
general = SubResource("Resource_General_1")

[node name="Messengers" type="Node2D" parent="MapRoot"]

[node name="Effects" type="Node2D" parent="MapRoot"]

[node name="PlanDrawLayer" type="Node2D" parent="MapRoot"]
script = ExtResource("2_plan_draw_layer")

[node name="IntelVisualizer" type="Node2D" parent="MapRoot"]
script = ExtResource("3_intel_visualizer")

[node name="HQ" type="Node2D" parent="."]
position = Vector2(200, 200)

[node name="UI" type="CanvasLayer" parent="."]

[node name="OrderPanel" parent="UI" instance=ExtResource("7_order_panel_scene")]
